--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow p-3 mb-5 bg-body-emphasis rounded">
                     <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Landing Page</h5>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow p-3 mb-5 bg-body-emphasis rounded">
                     <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Iguana Page</h5>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-4 py-2">
-                <div class="card">
+                <div class="card shadow p-3 mb-5 bg-body-emphasis rounded">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Cuppon Page</h5>
